--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@elastic/search-ui-app-search-connector": "^1.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "sanitize-html": "^2.7.1"
   },
   "devDependencies": {
     "rewire": "^6.0.0"
